logs/sqlbean.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DBUtils'...
Listing './lib/python3.5/site-packages/DBUtils/Docs'...
Listing './lib/python3.5/site-packages/DBUtils/Examples'...
Compiling './lib/python3.5/site-packages/DBUtils/Examples/DBUtilsExample.py'...
***   File "./lib/python3.5/site-packages/DBUtils/Examples/DBUtilsExample.py", line 150
    except self.dbapi.Error, error:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/DBUtils/Tests'...
Listing './lib/python3.5/site-packages/DBUtils-1.2.egg-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlbean'...
Listing './lib/python3.5/site-packages/sqlbean/db'...
Compiling './lib/python3.5/site-packages/sqlbean/db/lrucache.py'...
***   File "./lib/python3.5/site-packages/sqlbean/db/lrucache.py", line 124
    raise ValueError, size
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlbean/db/query.py'...
***   File "./lib/python3.5/site-packages/sqlbean/db/query.py", line 282
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlbean/db/sqlstore.py'...
***   File "./lib/python3.5/site-packages/sqlbean/db/sqlstore.py", line 177
    print "table not configure '%s'," % table
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sqlbean/example'...
Compiling './lib/python3.5/site-packages/sqlbean/example/dbutil_example.py'...
***   File "./lib/python3.5/site-packages/sqlbean/example/dbutil_example.py", line 30
    print i.UserId
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sqlbean/example/mysqldb_example.py'...
***   File "./lib/python3.5/site-packages/sqlbean/example/mysqldb_example.py", line 27
    print i.UserId
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sqlbean/example/sqlfarm_example.py'...
***   File "./lib/python3.5/site-packages/sqlbean/example/sqlfarm_example.py", line 26
    print i.id
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sqlbean/example/sqlite_example.py'...
***   File "./lib/python3.5/site-packages/sqlbean/example/sqlite_example.py", line 29
    print i.id, i.name
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sqlbean-0.603.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
